r164 (05. 07. 2023):
Crude Awakening: Fixed a crash on clients due to a typo

r163 (04. 07. 2023):
Added option "Aggregate Assault Delay and Duration into one tracker"
Crude Awakening: Fixed an issue where achievement tracker for "Human Torch" could get stuck
Hostile Takeover: Added achievement tracker for "Texas Treasures, Part 3"
Hostile Takeover: Possible fix for the achievement tracker "Just Passing Through" not showing correct time left in multiplayer
Fixed a possible log spam on the first game load

r162 (28. 06. 2023):
Added trackers for Crude Awakening
Fixed an issue where job name in mission briefing moved when XP Overview is disabled

r161 (25. 06. 2023):
Fixed a crash due to a typo

r160 (24. 06. 2023):
Trade Delay Tracker: Fixed a crash after dropin and one or more teammates are in custody

r159 (23. 06. 2023):
Added option "Show Number of your Converts only"
Added option "Show in Trade Delay Tracker amount of killed civilians"

r158 (17. 06. 2023):
Fixed Lobby code panel overlapping with XP Overview panel

r157 (08. 06. 2023):
Updated to U237

r156 (07. 06. 2023):
The Biker Heist: Fixed a crash when mechanic started working
Drama Tracker: Tracker is disabled in Safehouse Nightmare
Drama Tracker: Tracker is disabled in endless assaults
Trade Delay Tracker: Improved accuracy with very long trade delays
Trade Delay Tracker: Tracker will use less space on the screen
Escape: Overpass: Fixed an issue where Loot Counter is not visible for clients

r155 (03. 06. 2023):
Added option to change colors in Mission Briefing XP Breakdown
Buffs: Inspire (AI) is now synced to other players
Scarface Mansion: Fixed an issue where "Settling a Scar" achievement tracker does not update correctly after alarm
Safehouse Nightmare: Trade Delay tracker is disabled
Rats Day 1: Fixed an issue where Loot Counter is not visible on OVERKILL difficulty or above
Escape: Park: Fixed an issue where Loot Counter is not visible for clients